# YourTokenHelper

./: .gitignore  README.md  environment.yml
.cargo/: config.toml
apps/desktop/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.command-tests.json
apps/desktop/src-tauri/: Cargo.toml  source-refresh-error.sample.json  source-refresh-summary.sample.json  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
backend/: README.md  __init__.py  sidecar_cli.py
backend/core/: __init__.py  aggregation.py  models.py  serialization.py
backend/fixtures/: __init__.py  mock_summary.py  mock_v1_summary.json  source_refresh_summary.py  storage_seed_summary.py
backend/sources/: __init__.py  adapters.py  api_cost_provider.py  api_provider_billing_sync_command_cli.py  api_provider_billing_sync_commands.py  base.py  commands.py  discovery.py  jsonl_usage.py  manual_allowance_command_cli.py  manual_allowance_commands.py  openai_admin.py  openai_admin_command_cli.py  openai_admin_commands.py  openai_admin_key_monitor.py  openai_admin_key_monitor_command_cli.py  openai_admin_key_monitor_commands.py  (+7 more)
docs/: backend-sidecar-packaging-design.md  implementation-roadmap.md  interface-design-v1.md  pr-0-plan.md  pr-1-api-spike-findings.md  pr-1-api-spike.md  pr-1b-local-source-discovery-findings.md  pr-1b-local-source-discovery.md  pr-2-parser-contract.md  pr-5-local-source-sync.md  pr-6-openai-api-cost-source.md  prd-v1.md  programming-agent-source-candidates.md  source-strategy-v1.md  token-usage-viewer-research.md
experiments/: README.md
(+76 files in other folders)
