[package]
name = "your-token-helper"
version = "0.0.0"
description = "Personal coding-tool token usage viewer"
authors = ["YourTokenHelper"]
edition = "2021"

[lib]
name = "your_token_helper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.0", features = [] }

[dependencies]
tauri = { version = "2.9.0", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
